--- a/GoIPDynDnsClient/GoIPDynDnsClient.csproj
+++ b/GoIPDynDnsClient/GoIPDynDnsClient.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Config.cs" />
+    <Compile Include="IPResolve.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebCall.cs" />
