--- a/GoIPDynDnsClient/GoIPDynDnsClient.WindowsService/GoIPDynDnsClient.WindowsService.csproj
+++ b/GoIPDynDnsClient/GoIPDynDnsClient.WindowsService/GoIPDynDnsClient.WindowsService.csproj
@@ -60,7 +60,7 @@
     <Compile Include="StatusChecker.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\GoIPDynDnsClient.csproj">
+    <ProjectReference Include="..\GoIPDynDnsClient\GoIPDynDnsClient.csproj">
       <Project>{07316df2-7dc8-4e17-b3d6-7fb1a49a79fb}</Project>
       <Name>GoIPDynDnsClient</Name>
     </ProjectReference>
@@ -69,6 +69,9 @@
     <EmbeddedResource Include="ProjectInstaller.resx">
       <DependentUpon>ProjectInstaller.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Installhelp.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
