--- a/GoIPDynDnsClient/GoIPDynDnsClient/GoIPDynDnsClient.csproj
+++ b/GoIPDynDnsClient/GoIPDynDnsClient/GoIPDynDnsClient.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{07316DF2-7DC8-4E17-B3D6-7FB1A49A79FB}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>GoIPDynDnsClient</RootNamespace>
     <AssemblyName>GoIPDynDnsClient</AssemblyName>
     <TargetFrameworkVersion>v3.0</TargetFrameworkVersion>
@@ -32,6 +32,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
